--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_boxicons: ^3.0.0
   flutter_staggered_grid_view: ^0.6.2
-  flutter_webview_plugin: ^0.4.0
+  # flutter_webview_plugin: ^0.4.0
   flutter_rating_bar: ^4.0.1
   http: ^0.13.5
   image_picker: ^0.8.5+3
@@ -61,7 +61,7 @@ dependencies:
   onesignal_flutter: ^3.4.1
   path_provider: ^2.0.11
   image_gallery_saver: ^1.7.1
-  permission_handler: ^10.0.0
+  permission_handler: ^9.0.2
   open_file: ^3.2.1
   package_info_plus: ^1.4.2
   pdf: ^3.8.3
