--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_boxicons: ^3.0.0
   flutter_staggered_grid_view: ^0.6.2
-  # flutter_webview_plugin: ^0.4.0
+  flutter_webview_plugin: ^0.4.0
   flutter_rating_bar: ^4.0.1
   http: ^0.13.5
   image_picker: ^0.8.5+3
